--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -703,7 +703,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
       "metadata": {
         "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1"
@@ -712,83 +712,59 @@
       "source": [
         "#si-matrix\n",
         "\n",
-        "\"\"\"\n",
-        "\n",
-        "This class is intended to create a way to store the values and shape of a\n",
-        "matrix. The matrix can be imported as a list (matrix with single column,\n",
-        "or vector), or as a list of lists (2-dimensional matrices) via the value argument.\n",
-        "The class includes\n",
-        "an __init__ function to read in the matrix, or create a matrix of 1's of a\n",
-        "specific dimensionality. The class also includes a __repr__ function to\n",
-        "designate the method for printing the matrix to screen.\n",
-        "\n",
-        "\"\"\"\n",
-        "\n",
         "class Matrix(object):\n",
         "    \"\"\"\n",
-        "    Read the matrix and store as part of the class object\n",
+        "    Read the matrix and store it as part of the class object.\n",
         "    \"\"\"\n",
-        "    def __init__(self, value = {}, dim=(1,1)):\n",
-        "        if isinstance(value, list):\n",
-        "            if len(value)>0:\n",
-        "                if type(value[0]) is int or type(value[0]) is float:\n",
-        "                    row = (int, float)\n",
-        "                else:\n",
-        "                    row = type(value[0])\n",
-        "                for i in value:\n",
-        "                    if type(i) is not int, type(i) is not float, type(i) is not list:\n",
-        "                        raise RuntimeError(\"Matrix is invalid. Please ensure that all elements share a type.\")\n",
-        "                if row is list:\n",
-        "                    lenInner = len(value[0])\n",
-        "                    for i in value:\n",
-        "                        if len(i) is not lenInner:\n",
-        "                            raise RuntimeError(\"Matrix is invalid. Please ensure that all rows have uniform length.\")\n",
-        "                        for j in i:\n",
-        "                            if type(j) is not int and type(j) is not float:\n",
-        "                                raise RuntimeError(\"Matrix is invalid. Please ensure that all elements are numeric (either float or int).\")\n",
-        "                self.value = value\n",
-        "                try:\n",
-        "                    self.shape = (len(value), len(value[0]))\n",
-        "                except:\n",
-        "                    self.shape = (len(value), 1)\n",
-        "            if:\n",
-        "                matrix = []\n",
-        "                for i in range(dim[0]):\n",
-        "                        row = []\n",
-        "                        for j in range(dim[1]):\n",
-        "                            row.append(1)\n",
-        "                        matrix.append(row)\n",
+        "    def __init__(self, value=None, dim=(1, 1)):\n",
+        "        if value is None:\n",
+        "            value = []\n",
         "\n",
-        "                value = matrix\n",
-        "                shape = dim\n",
+        "        if isinstance(value, list) and len(value) > 0:\n",
+        "            # Check if the matrix is a vector or 2D matrix\n",
+        "            if isinstance(value[0], (int, float)):\n",
+        "                for i in value:\n",
+        "                    if not isinstance(i, (int, float)):\n",
+        "                        raise RuntimeError(\"Matrix is invalid. Please ensure that all elements are of the same type.\")\n",
+        "                self.value = [value]\n",
+        "                self.shape = (1, len(value))\n",
+        "            elif isinstance(value[0], list):\n",
+        "                len_inner = len(value[0])\n",
+        "                for i in value:\n",
+        "                    if len(i) != len_inner:\n",
+        "                        raise RuntimeError(\"Matrix is invalid. Please ensure that all rows have uniform length.\")\n",
+        "                    for j in i:\n",
+        "                        if not isinstance(j, (int, float)):\n",
+        "                            raise RuntimeError(\"Matrix is invalid. Please ensure that all elements are numeric (either float or int).\")\n",
+        "                self.value = value\n",
+        "                self.shape = (len(value), len(value[0]))\n",
+        "            else:\n",
+        "                raise RuntimeError(\"Matrix is invalid. It must be a list of lists or a list of numbers.\")\n",
+        "        else:\n",
+        "            # Create a matrix of 1's if no valid value is provided\n",
+        "            matrix = []\n",
+        "            for i in range(dim[0]):\n",
+        "                row = [1] * dim[1]\n",
+        "                matrix.append(row)\n",
+        "            self.value = matrix\n",
+        "            self.shape = dim\n",
         "\n",
         "    \"\"\"\n",
         "    Print the matrix to screen\n",
         "    \"\"\"\n",
-        "    def __repr__(self)\n",
+        "    def __repr__(self):\n",
         "        string = \"  \"\n",
-        "        for i in range(shape[0]):\n",
-        "            if shape[1]>1:\n",
-        "                if i < shape[0]-1:\n",
-        "                    string += \"[ \"\n",
-        "                    for j in range(shape[1]):\n",
-        "                        string += str(value[i][j]) + \" \"\n",
-        "                    string += \"]\\n  \"\n",
-        "                else:\n",
-        "                    string += \"[ \"\n",
-        "                    for j in range(shape[1]):\n",
-        "                        string += str(value[i][j]) + \" \"\n",
+        "        for i in range(self.shape[0]):\n",
+        "            if self.shape[1] > 1:\n",
+        "                string += \"[ \"\n",
+        "                for j in range(self.shape[1]):\n",
+        "                    string += str(self.value[i][j]) + \" \"\n",
+        "                string += \"]\\n  \" if i < self.shape[0] - 1 else \"]\"\n",
         "            else:\n",
-        "                if shape[0]==1:\n",
+        "                if self.shape[0] == 1:\n",
         "                    string += \"[ \"\n",
-        "                if i < shape[0]-1:\n",
-        "                    if shape[1]>1:\n",
-        "                        string += \"[ \"\n",
-        "                    string += str(value[i]) + \"\\n  \"\n",
-        "                else:\n",
-        "                    string += str(value[i]) + \" \"\n",
-        "        if shape[1]>1:\n",
-        "            string += \"]\\n\\n\"\n",
+        "                string += str(self.value[i][0]) + \" \"\n",
+        "        string += \"\\n\"\n",
         "        return string"
       ]
     }
