--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -726,7 +726,7 @@
         "                for i in value:\n",
         "                    if not isinstance(i, (int, float)):\n",
         "                        raise RuntimeError(\"Matrix is invalid. Please ensure that all elements are of the same type.\")\n",
-        "                self.value = [value]\n",
+        "                self.value = [value]  # Treat the vector as a row vector (1 x n)\n",
         "                self.shape = (1, len(value))\n",
         "            elif isinstance(value[0], list):\n",
         "                len_inner = len(value[0])\n",
@@ -755,17 +755,11 @@
         "    def __repr__(self):\n",
         "        string = \"  \"\n",
         "        for i in range(self.shape[0]):\n",
-        "            if self.shape[1] > 1:\n",
-        "                string += \"[ \"\n",
-        "                for j in range(self.shape[1]):\n",
-        "                    string += str(self.value[i][j]) + \" \"\n",
-        "                string += \"]\\n  \" if i < self.shape[0] - 1 else \"]\"\n",
-        "            else:\n",
-        "                if self.shape[0] == 1:\n",
-        "                    string += \"[ \"\n",
-        "                string += str(self.value[i][0]) + \" \"\n",
-        "        string += \"\\n\"\n",
-        "        return string"
+        "            string += \"[ \"\n",
+        "            for j in range(self.shape[1]):\n",
+        "                string += str(self.value[i][j]) + \" \"\n",
+        "            string = string.strip() + \"]\\n  \"  # Strip extra spaces and add newline\n",
+        "        return string.strip()  # Remove trailing spaces or new lines\n"
       ]
     }
   ],
