--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -753,13 +753,14 @@
         "    Print the matrix to screen\n",
         "    \"\"\"\n",
         "    def __repr__(self):\n",
-        "        string = \"  \"\n",
+        "        string = \"\"\n",
         "        for i in range(self.shape[0]):\n",
-        "            string += \"[ \"\n",
+        "            string += \"[\"\n",
         "            for j in range(self.shape[1]):\n",
-        "                string += str(self.value[i][j]) + \" \"\n",
-        "            string = string.strip() + \"]\\n  \"  # Strip extra spaces and add newline\n",
-        "        return string.strip()  # Remove trailing spaces or new lines\n"
+        "                string += f\" {self.value[i][j]}\"\n",
+        "            string += \" ]\\n\"\n",
+        "        return string.strip()  # Ensure no trailing newline at the end\n",
+        "\n"
       ]
     }
   ],
