--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -703,7 +703,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
       "metadata": {
         "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1"
@@ -711,7 +711,6 @@
       "outputs": [],
       "source": [
         "#si-matrix\n",
-        "\n",
         "class Matrix(object):\n",
         "    \"\"\"\n",
         "    Read the matrix and store it as part of the class object.\n",
@@ -741,7 +740,7 @@
         "            else:\n",
         "                raise RuntimeError(\"Matrix is invalid. It must be a list of lists or a list of numbers.\")\n",
         "        else:\n",
-        "            # Create a matrix of 1's if no valid value is provided\n",
+        "\n",
         "            matrix = []\n",
         "            for i in range(dim[0]):\n",
         "                row = [1] * dim[1]\n",
@@ -755,12 +754,11 @@
         "    def __repr__(self):\n",
         "        string = \"\"\n",
         "        for i in range(self.shape[0]):\n",
-        "            string += \"[\"\n",
+        "            string += \"  [\"\n",
         "            for j in range(self.shape[1]):\n",
         "                string += f\" {self.value[i][j]}\"\n",
         "            string += \" ]\\n\"\n",
-        "        return string.strip()  # Ensure no trailing newline at the end\n",
-        "\n"
+        "        return string.strip() + \"\\n\"\n"
       ]
     }
   ],
