--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -712,20 +712,17 @@
       "source": [
         "#si-matrix\n",
         "class Matrix(object):\n",
-        "    \"\"\"\n",
-        "    Read the matrix and store it as part of the class object.\n",
-        "    \"\"\"\n",
+        "\n",
         "    def __init__(self, value=None, dim=(1, 1)):\n",
         "        if value is None:\n",
         "            value = []\n",
         "\n",
         "        if isinstance(value, list) and len(value) > 0:\n",
-        "            # Check if the matrix is a vector or 2D matrix\n",
         "            if isinstance(value[0], (int, float)):\n",
         "                for i in value:\n",
         "                    if not isinstance(i, (int, float)):\n",
         "                        raise RuntimeError(\"Matrix is invalid. Please ensure that all elements are of the same type.\")\n",
-        "                self.value = [value]  # Treat the vector as a row vector (1 x n)\n",
+        "                self.value = [value]\n",
         "                self.shape = (1, len(value))\n",
         "            elif isinstance(value[0], list):\n",
         "                len_inner = len(value[0])\n",
@@ -740,7 +737,6 @@
         "            else:\n",
         "                raise RuntimeError(\"Matrix is invalid. It must be a list of lists or a list of numbers.\")\n",
         "        else:\n",
-        "\n",
         "            matrix = []\n",
         "            for i in range(dim[0]):\n",
         "                row = [1] * dim[1]\n",
@@ -748,17 +744,15 @@
         "            self.value = matrix\n",
         "            self.shape = dim\n",
         "\n",
-        "    \"\"\"\n",
-        "    Print the matrix to screen\n",
-        "    \"\"\"\n",
+        "\n",
+        "\n",
         "    def __repr__(self):\n",
         "        string = \"\"\n",
         "        for i in range(self.shape[0]):\n",
         "            string += \"  [\"\n",
-        "            for j in range(self.shape[1]):\n",
-        "                string += f\" {self.value[i][j]}\"\n",
+        "            string += \" \".join(str(self.value[i][j]) for j in range(self.shape[1]))\n",
         "            string += \" ]\\n\"\n",
-        "        return string.strip() + \"\\n\"\n"
+        "        return string.rstrip()\n"
       ]
     }
   ],
