--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -712,17 +712,21 @@
       "source": [
         "#si-matrix\n",
         "class Matrix(object):\n",
-        "\n",
+        "    class Matrix(object):\n",
+        "    \"\"\"\n",
+        "    Read the matrix and store it as part of the class object.\n",
+        "    \"\"\"\n",
         "    def __init__(self, value=None, dim=(1, 1)):\n",
         "        if value is None:\n",
         "            value = []\n",
         "\n",
         "        if isinstance(value, list) and len(value) > 0:\n",
+        "            # Check if the matrix is a vector or 2D matrix\n",
         "            if isinstance(value[0], (int, float)):\n",
         "                for i in value:\n",
         "                    if not isinstance(i, (int, float)):\n",
         "                        raise RuntimeError(\"Matrix is invalid. Please ensure that all elements are of the same type.\")\n",
-        "                self.value = [value]\n",
+        "                self.value = [value]  # Treat the vector as a row vector (1 x n)\n",
         "                self.shape = (1, len(value))\n",
         "            elif isinstance(value[0], list):\n",
         "                len_inner = len(value[0])\n",
@@ -737,6 +741,7 @@
         "            else:\n",
         "                raise RuntimeError(\"Matrix is invalid. It must be a list of lists or a list of numbers.\")\n",
         "        else:\n",
+        "            # Create a matrix of 1's if no valid value is provided\n",
         "            matrix = []\n",
         "            for i in range(dim[0]):\n",
         "                row = [1] * dim[1]\n",
@@ -744,15 +749,16 @@
         "            self.value = matrix\n",
         "            self.shape = dim\n",
         "\n",
-        "\n",
-        "\n",
+        "    \"\"\"\n",
+        "    Print the matrix to screen\n",
+        "    \"\"\"\n",
         "    def __repr__(self):\n",
         "        string = \"\"\n",
         "        for i in range(self.shape[0]):\n",
-        "            string += \"  [\"\n",
-        "            string += \" \".join(str(self.value[i][j]) for j in range(self.shape[1]))\n",
-        "            string += \" ]\\n\"\n",
-        "        return string.rstrip()\n"
+        "            string += \"  [ \"  # Added space after the opening bracket\n",
+        "            string += \" \".join(str(self.value[i][j]) for j in range(self.shape[1]))  # Join values with a space\n",
+        "            string += \" ]\\n\"  # Close the row with a space before closing bracket\n",
+        "        return string.rstrip() + \"\\n\\n\"  # Ensure extra newline at the end of the string\n"
       ]
     }
   ],
