--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -712,7 +712,6 @@
       "source": [
         "#si-matrix\n",
         "class Matrix(object):\n",
-        "    class Matrix(object):\n",
         "    \"\"\"\n",
         "    Read the matrix and store it as part of the class object.\n",
         "    \"\"\"\n",
@@ -755,10 +754,10 @@
         "    def __repr__(self):\n",
         "        string = \"\"\n",
         "        for i in range(self.shape[0]):\n",
-        "            string += \"  [ \"  # Added space after the opening bracket\n",
+        "            string += \"  [\"  # Two spaces before the row\n",
         "            string += \" \".join(str(self.value[i][j]) for j in range(self.shape[1]))  # Join values with a space\n",
         "            string += \" ]\\n\"  # Close the row with a space before closing bracket\n",
-        "        return string.rstrip() + \"\\n\\n\"  # Ensure extra newline at the end of the string\n"
+        "        return string.rstrip()  # Strip trailing newlines\n"
       ]
     }
   ],
