--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -703,14 +703,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
       "metadata": {
-        "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1"
+        "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
+        "outputId": "aefbc1cc-8c30-4d09-ef74-74701914eba9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "('  [1 2 3 4 ]', '  [1 2 ]\\n  [3 4 ]', '  [1 ]')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ],
       "source": [
         "#si-matrix\n",
+        "# Let's implement and test the Matrix class with the given test cases\n",
+        "\n",
         "class Matrix(object):\n",
         "    \"\"\"\n",
         "    Read the matrix and store it as part of the class object.\n",
@@ -757,7 +774,22 @@
         "            string += \"  [\"  # Two spaces before the row\n",
         "            string += \" \".join(str(self.value[i][j]) for j in range(self.shape[1]))  # Join values with a space\n",
         "            string += \" ]\\n\"  # Close the row with a space before closing bracket\n",
-        "        return string.rstrip()  # Strip trailing newlines\n"
+        "        return string.rstrip()  # Strip trailing newlines\n",
+        "\n",
+        "\n",
+        "# Test 1: 1D vector (row vector)\n",
+        "m1 = Matrix([1, 2, 3, 4])\n",
+        "repr_m1 = repr(m1)\n",
+        "\n",
+        "# Test 2: 2D matrix\n",
+        "m2 = Matrix([[1, 2], [3, 4]])\n",
+        "repr_m2 = repr(m2)\n",
+        "\n",
+        "# Test 3: Empty matrix (default 1x1 matrix of 1s)\n",
+        "m3 = Matrix()\n",
+        "repr_m3 = repr(m3)\n",
+        "\n",
+        "repr_m1, repr_m2, repr_m3\n"
       ]
     }
   ],
