--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -703,31 +703,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
       "metadata": {
         "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
-        "outputId": "aefbc1cc-8c30-4d09-ef74-74701914eba9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "80dde1a3-c14a-4a42-a551-08c6276319d3"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "('  [1 2 3 4 ]', '  [1 2 ]\\n  [3 4 ]', '  [1 ]')"
+              "('  [ 1 2 3 4 ]\\n',\n",
+              " '  [ 1 2 ]\\n  [ 3 4 ]\\n',\n",
+              " '  [ 1 ]\\n',\n",
+              " '  [ 1 1 1 1 1 1 1 1 1 1 ]\\n  [ 1 1 1 1 1 1 1 1 1 1 ]\\n  [ 1 1 1 1 1 1 1 1 1 1 ]\\n  [ 1 1 1 1 1 1 1 1 1 1 ]\\n  [ 1 1 1 1 1 1 1 1 1 1 ]\\n  [ 1 1 1 1 1 1 1 1 1 1 ]\\n  [ 1 1 1 1 1 1 1 1 1 1 ]\\n  [ 1 1 1 1 1 1 1 1 1 1 ]\\n  [ 1 1 1 1 1 1 1 1 1 1 ]\\n  [ 1 1 1 1 1 1 1 1 1 1 ]\\n',\n",
+              " '  [ 4 6 1 9 10 12 1 7 ]\\n  [ 1 2 3 4 5 6 7 8 ]\\n  [ 19 0 3 1 10 15 -1 -1 ]\\n')"
             ]
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 2
         }
       ],
       "source": [
         "#si-matrix\n",
-        "# Let's implement and test the Matrix class with the given test cases\n",
-        "\n",
         "class Matrix(object):\n",
         "    \"\"\"\n",
         "    Read the matrix and store it as part of the class object.\n",
@@ -771,11 +773,10 @@
         "    def __repr__(self):\n",
         "        string = \"\"\n",
         "        for i in range(self.shape[0]):\n",
-        "            string += \"  [\"  # Two spaces before the row\n",
+        "            string += \"  [ \"  # Two spaces before the row, and a space after the opening bracket\n",
         "            string += \" \".join(str(self.value[i][j]) for j in range(self.shape[1]))  # Join values with a space\n",
         "            string += \" ]\\n\"  # Close the row with a space before closing bracket\n",
-        "        return string.rstrip()  # Strip trailing newlines\n",
-        "\n",
+        "        return string  # Do not strip trailing newlines\n",
         "\n",
         "# Test 1: 1D vector (row vector)\n",
         "m1 = Matrix([1, 2, 3, 4])\n",
@@ -789,7 +790,15 @@
         "m3 = Matrix()\n",
         "repr_m3 = repr(m3)\n",
         "\n",
-        "repr_m1, repr_m2, repr_m3\n"
+        "# Test 4: 10x10 matrix\n",
+        "m4 = Matrix(dim=(10, 10))\n",
+        "repr_m4 = repr(m4)\n",
+        "\n",
+        "# Test 5: 3x8 matrix with values\n",
+        "m5 = Matrix([[4, 6, 1, 9, 10, 12, 1, 7], [1, 2, 3, 4, 5, 6, 7, 8], [19, 0, 3, 1, 10, 15, -1, -1]])\n",
+        "repr_m5 = repr(m5)\n",
+        "\n",
+        "repr_m1, repr_m2, repr_m3, repr_m4, repr_m5\n"
       ]
     }
   ],
