--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -703,29 +703,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
       "metadata": {
         "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "80dde1a3-c14a-4a42-a551-08c6276319d3"
+        "outputId": "e043642c-057e-413c-9cc1-b53563f4983e"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "('  [ 1 2 3 4 ]\\n',\n",
-              " '  [ 1 2 ]\\n  [ 3 4 ]\\n',\n",
-              " '  [ 1 ]\\n',\n",
-              " '  [ 1 1 1 1 1 1 1 1 1 1 ]\\n  [ 1 1 1 1 1 1 1 1 1 1 ]\\n  [ 1 1 1 1 1 1 1 1 1 1 ]\\n  [ 1 1 1 1 1 1 1 1 1 1 ]\\n  [ 1 1 1 1 1 1 1 1 1 1 ]\\n  [ 1 1 1 1 1 1 1 1 1 1 ]\\n  [ 1 1 1 1 1 1 1 1 1 1 ]\\n  [ 1 1 1 1 1 1 1 1 1 1 ]\\n  [ 1 1 1 1 1 1 1 1 1 1 ]\\n  [ 1 1 1 1 1 1 1 1 1 1 ]\\n',\n",
-              " '  [ 4 6 1 9 10 12 1 7 ]\\n  [ 1 2 3 4 5 6 7 8 ]\\n  [ 19 0 3 1 10 15 -1 -1 ]\\n')"
+              "('  [ 1 2 3 4 ]\\n\\n',\n",
+              " '  [ 1 2 ]\\n  [ 3 4 ]\\n\\n',\n",
+              " '  [ 1 ]\\n\\n',\n",
+              " '  [ 1 1 1 1 1 1 1 1 1 1 ]\\n  [ 1 1 1 1 1 1 1 1 1 1 ]\\n  [ 1 1 1 1 1 1 1 1 1 1 ]\\n  [ 1 1 1 1 1 1 1 1 1 1 ]\\n  [ 1 1 1 1 1 1 1 1 1 1 ]\\n  [ 1 1 1 1 1 1 1 1 1 1 ]\\n  [ 1 1 1 1 1 1 1 1 1 1 ]\\n  [ 1 1 1 1 1 1 1 1 1 1 ]\\n  [ 1 1 1 1 1 1 1 1 1 1 ]\\n  [ 1 1 1 1 1 1 1 1 1 1 ]\\n\\n',\n",
+              " '  [ 4 6 1 9 10 12 1 7 ]\\n  [ 1 2 3 4 5 6 7 8 ]\\n  [ 19 0 3 1 10 15 -1 -1 ]\\n\\n')"
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 3
         }
       ],
       "source": [
@@ -776,7 +776,7 @@
         "            string += \"  [ \"  # Two spaces before the row, and a space after the opening bracket\n",
         "            string += \" \".join(str(self.value[i][j]) for j in range(self.shape[1]))  # Join values with a space\n",
         "            string += \" ]\\n\"  # Close the row with a space before closing bracket\n",
-        "        return string  # Do not strip trailing newlines\n",
+        "        return string + \"\\n\"  # Add extra newline at the end\n",
         "\n",
         "# Test 1: 1D vector (row vector)\n",
         "m1 = Matrix([1, 2, 3, 4])\n",
